# arp_reach

./: .gitmodules  README.md  build_ws.sh  dependencies.repos  test.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: needed-features.md
log/: latest_list
src/arp_resources/arp_deployment_gp20/: CMakeLists.txt  package.xml
src/arp_resources/arp_deployment_gp20/model/reach_study/: gp20_joint_limits.yaml  gp20_study.srdf  gp20_study.xacro
src/arp_resources/arp_deployment_gp20/model/xacro_files/: common_colors.xacro  common_materials.xacro  gp20_hl.xacro  gp20_hl_macro.xacro
src/arp_resources/arp_msgs/: CMakeLists.txt  README.md  package.xml
src/arp_resources/arp_msgs/msg/: PCDFile.msg  XMLFile.msg  YAMLFile.msg
src/arp_resources/arp_msgs/srv/: CheckGridsetReachability.srv  FormatPosesFromXML.srv  FormatPosesToPCD.srv  RunReachStudy.srv
src/arp_resources/arp_reach/: CMakeLists.txt  README.md  package.xml
src/arp_resources/arp_reach/arp_reach/: CMakeLists.txt  README.md  package.xml  poseArray.pcd  study_config.yaml
src/arp_resources/arp_reach/arp_reach/config/: study_config.yaml
src/arp_resources/arp_reach/arp_reach/launch/: reach_config.launch.py  reach_study_node.launch.py  test.launch.py
src/arp_resources/arp_reach/arp_reach/nodes/: reachClient.cpp  reachStudyService.cpp  reach_client.cpp  reach_client_test.py  reach_study_node.cpp  reach_study_service.cpp  test_service_node.cpp
src/arp_resources/arp_reach/launch/: reach_launch.xml
src/arp_resources/arp_reach/pcd_processing/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/arp_resources/arp_reach/pcd_processing/file_makers/: pose_array_to_pcd.py  yaml_file_maker.py
src/arp_resources/arp_reach/pcd_processing/file_makers_lib/include/interfaces/: PoseArrayToPCD.hpp  YAMLFileWriter.hpp
src/arp_resources/arp_reach/pcd_processing/file_makers_lib/src/: PoseArrayToPCD.cpp  YAMLFileWriter.cpp
src/arp_resources/arp_reach/pcd_processing/launch/: pcd_client_launch.xml  pcd_service_launch.xml
src/arp_resources/arp_reach/pcd_processing/nodes/: PoseArrayToPCDClient.cpp  PoseArrayToPCDClient.py  PoseArrayToPCDService.cpp  PoseArrayToPCDService.py  pose_to_pcd_service.py
src/arp_resources/arp_reach/pcd_processing/pcd/: pose_array_to_pcd.py  yaml_file_maker.py
src/arp_resources/arp_reach/pcd_processing/pcd_processing/: PoseArrayToPCDClient.py  PoseArrayToPCDService.py
src/arp_resources/arp_reach/pcd_processing/pcd_processing/pcd/generate/: pose_array_to_pcd.py
src/arp_resources/arp_reach/pcd_processing/python/: pose_array_to_pcd.py
src/arp_resources/arp_reach/pcd_processing/src/: PoseArrayToPCDClient.cpp  PoseArrayToPCDService.cpp
src/arp_resources/arp_reach/pcd_processing/yaml/: yaml_file_maker.py
src/arp_resources/arp_reach/reach_config/: CMakeLists.txt  package.xml  poseArr.pcd
src/arp_resources/arp_reach/reach_config/config/: posePath.yaml
src/arp_resources/arp_reach/reach_config/launch/: gp20_start.launch.py  reach_config.launch.py  reach_study_node.launch.py
src/arp_resources/arp_reach/xml_processing/: CMakeLists.txt  README.md  package.xml
src/arp_resources/arp_reach/xml_processing/include/: pose_structs.hpp
src/arp_resources/arp_reach/xml_processing/include/interfaces/: result_parsing.hpp
src/arp_resources/arp_reach/xml_processing/issue#6/: reach.db.xml  translated_airfoil.pcd
src/arp_resources/arp_reach/xml_processing/nodes/: XMLToPoseArrayClient.cpp  XMLToPoseArrayService.cpp
src/arp_resources/arp_reach/xml_processing/parsing_lib/include/: pose_structs.hpp
src/arp_resources/arp_reach/xml_processing/parsing_lib/include/interfaces/: array_transform.hpp  float_standard.hpp  result_parsing.hpp  xml_parser.hpp
src/arp_resources/arp_reach/xml_processing/parsing_lib/src/: array_transform.cpp  float_standard.cpp  result_parsing.cpp  xml_parser.cpp
src/arp_resources/arp_reach/xml_processing/src/: XMLToPoseArrayService.cpp  result_parsing.cpp
src/arp_resources/motoman_resources/: CMakeLists.txt  package.xml
src/arp_resources/motoman_resources/urdf/: common_colors.xacro  common_materials.xacro
