<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format = "3">
 <name>arp_msgs</name>
 <version>0.0.0</version>
 <description>
    This package contains the arp_msgs that will be used in all the other processing servers!
 </description>
 <maintainer email="ntchmura@gmail.com">Natalie Chmura</maintainer>
 <license>Apache License 2.0</license>

 <member_of_group>rosidl_interface_packages</member_of_group>
 <buildtool_depend>ament_cmake</buildtool_depend>

 <build_depend>rosidl_default_generators</build_depend>

 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>rosidl_default_generators</depend>

 <exec_depend>rosidl_default_runtime</exec_depend>

 <test_depend>ament_lint_auto</test_depend>

 <export>
    <build_type>ament_cmkae</build_type>
 </export>
</package>