<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arp_reach_launch</name>
    <version>0.0.0</version>
    <description>
        This package contains a launch file which will launch the pcd_processing, xml_processing, and arp_reach service nodes!
        As a result a client (Or series of clients) built for this pipline will handle the full pipline from PoseArray to the
        results of those poses as a function of reach!
    </description>
    <author>Natalie T. Chmura</author>
    <maintainer email="chmura.18@osu.edu">Natalie T. Chmura (AIMS Lab @ The Ohio State University)</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>pcd_processing</depend>
    <depend>xml_processing</depend>
    <depend>arp_reach</depend>
    <depend>arp_msgs</depend>
    <depend>reach</depend>
    <depend>reach_ros</depend>
    <depend>arp_deployment_gp20</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>