<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arp_reach</name>
    <version>0.0.0</version>
    <description>
        This package contains a custom library used by the reach custom client server system
    </description>
    <author>Natalie T. Chmura</author>
    <maintainer email="chmura.18@osu.edu">Natalie T. Chmura (AIMS Lab @ The Ohio State University)</maintainer>
    <license>Apache Licesnse 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclpy</exec_depend>

    <exec_depend>arp_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>reach_ros</exec_depend>
    <exec_depend>reach</exec_depend>
    <exec_depend>yaml-cpp</exec_depend>
    
    <exec_depend>arp_deployment_gp20</exec_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>