<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format = "3">
 <name>pcd_processing</name>
 <version>0.0.0</version>
 <description>
    This package contains the client-server nodes that write a PoseArray's information into a PCD file, used in the arp-project.
 </description>
 <maintainer email="ntchmura@gmail.com">Natalie Chmura</maintainer>
 <license>Apache License 2.0</license>

 <exec_depend>std_msgs</exec_depend>
 <exec_depend>geometry_msgs</exec_depend>
 <exec_depend>arp_msgs</exec_depend>
 <exec_depend>rclpy</exec_depend>

<test_depend>python3-pytest</test_depend>

 <export>
    <build_type>ament_python</build_type>
 </export>
</package>