<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format = "3">
 <name>pcd_processing</name>
 <version>0.0.0</version>
 <description>
    This package builds the client and service nodes of the FormatPosesToPCD service! They take in a PoseArray
    and then call packages functionality to parse those Poses into a pcd file, and then use the PCD in the
    writing the yaml config file, which is then passed back to the client node whjich will then use the yaml to
    run a reach study!
 </description>
 <maintainer email="ntchmura@gmail.com">Natalie Chmura</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <buildtool_depend>ament_cmake_python</buildtool_depend>

 <exec_depend>rclpy</exec_depend>

 <exec_depend>std_msgs</exec_depend>
 <exec_depend>geometry_msgs</exec_depend>
 <exec_depend>arp_msgs</exec_depend>

 <exec_depend>python3</exec_depend>

 <export>
    <build_type>ament_cmake</build_type>
 </export>
</package>